7.jan (la)
      - fix #7303: Collision between rest and accidentals
      - fix #6599: Command line option to change config/settings directory
6.jan (la)
      - enable time signature deletion in timesig palette
5.jan (lv)
      - feature request #8355: bww import: hide key signature disabled
      (la)
      - fix #8503: Spacebar for play/pause (patch by David Bolton)
      - fix #6362: Tempo text position not saved for part > 1
4.jan (ws)
      - fix #6347: Multiple grace notes do not copy correctly
      (la)
      - fix #8357: Key sig properties : hide courtesy, hide naturals (patch by Miwarre)
      - add bagpipe in instruments.xml, change to bagpipe sound on bww import
3.jan.2011 (lv)
      - feature request #8355: bww import: add end barline
      - feature request #8355: bww import: hide key signature (not complete yet)
      - fix #8498: musicxml import/export: print-object="no" not handled for key signature
      - fix #8435: musicxml import: print-object="no" ignored on rest
2.jan.2011 (lv)
      - fix #8474: MusicXML import: Audiveris ".0" not handled in alter and in backup and forward duration
30.dec (lv)
      - fix #8428: musicxml import: voices mixed up
      - fix #4858: Courtesy accidentals do not import/export in MusicXML anymore
      - fix #8400: musicxml export: stem on whole note in triplet
29.dec (lv)
      - feature request #8355: bww import: fixed bww2mxml triplet beam
28.dec (lv)
      - feature request #8355: bww import: fixed export of metronome, triplet and stem
      - feature request #8355: bww import: fixed export of title, composer and rights
27.dec (lv)
      - feature request #8355: bww import: fixed voltas and triplets
      - feature request #8355: bww import: fixed clefs and multiple grace notes
      - feature request #8355: bww import: updated mscore regression testfiles
24.dec (lv)
      - feature request #8355: bww import: mscore regression test
      - feature request #8355: bww import: bww2mxml regression test