@@ -1739,7 +1739,6 @@ void MusicXml::direction(Measure* measure, int staff, QDomElement e)
                   else dyn->setAbove(placement == "above");
                   dyn->setUserOff(QPointF(rx, ry));
                   dyn->setMxmlOff(offset);
-
                   dyn->setTrack((staff + rstaff) * VOICES);
                   dyn->setTick(tick);
                   measure->add(dyn);
@@ -2276,6 +2275,13 @@ void MusicXml::xmlNote(Measure* measure, int staff, QDomElement e)
       QString tremoloType;
       int headGroup = 0;
       bool noStem = false;
+      QString placement;
+      QStringList dynamics;
+      qreal rx = 0.0;
+      qreal ry = 0.0;
+      qreal yoffset = 0.0; // actually this is default-y
+      qreal xoffset = 0.0;
+      bool hasYoffset = false;
 
       QString printObject = "yes";
       if (pn.isElement() && pn.nodeName() == "note") {
@@ -2483,8 +2489,18 @@ void MusicXml::xmlNote(Measure* measure, int staff, QDomElement e)
                               tupletBracket   = ee.attribute("bracket");
                               }
                         else if (ee.tagName() == "dynamics") {
-                              // int rx            = ee.attribute("relative-x").toInt();
-                              QString placement = ee.attribute("placement");
+                              placement = ee.attribute("placement");
+                              ry        = ee.attribute(QString("relative-y"), "0").toDouble() * -.1;
+                              rx        = ee.attribute(QString("relative-x"), "0").toDouble() * .1;
+                              yoffset   = ee.attribute("default-y").toDouble(&hasYoffset) * -0.1;
+                              xoffset   = ee.attribute("default-x", "0.0").toDouble() * 0.1;
+                              QDomElement eee = ee.firstChildElement();
+                              if (!eee.isNull()) {
+                                    if (eee.tagName() == "other-dynamics")
+                                          dynamics.push_back(eee.text());
+                                    else
+                                          dynamics.push_back(eee.tagName());
+                                    }
                               }
                         else if (ee.tagName() == "articulations") {
                               for (QDomElement eee = ee.firstChildElement(); !eee.isNull(); eee = eee.nextSiblingElement()) {
@@ -3072,6 +3088,21 @@ void MusicXml::xmlNote(Measure* measure, int staff, QDomElement e)
                   }
             else
                   printf("unknown tremolo type %d\n", tremolo);
+            }
+
+      // more than one dynamic ???
+      // LVIFIX: check import/export of <other-dynamics>unknown_text</...>
+      // TODO remove duplicate code (see MusicXml::direction)
+      for (QStringList::Iterator it = dynamics.begin(); it != dynamics.end(); ++it ) {
+            Dynamic* dyn = new Dynamic(score);
+            dyn->setSubtype(*it);
+            if (hasYoffset) dyn->setYoff(yoffset);
+            else dyn->setAbove(placement == "above");
+            dyn->setUserOff(QPointF(rx, ry));
+            // dyn->setMxmlOff(offset);
+            dyn->setTrack(track);
+            dyn->setTick(tick);
+            measure->add(dyn);
             }
 
       if (!grace) {
