@@ -1,3 +1,5 @@
+9.jan (lv)
+      - fix #8546: MusicXML import: dynamics in notations element are ignored
 7.jan (la)
       - fix #7303: Collision between rest and accidentals
       - fix #6599: Command line option to change config/settings directory
